# TIG_with_docker

./: .gitignore  Dockerfile  Makefile  README.md
catkin_ws/: LICENSE  README.md
catkin_ws/src/: CMakeLists.txt  DC motor
catkin_ws/src/DC_motor/: CMakeLists.txt
catkin_ws/src/DC_motor/src/: wall.cpp
catkin_ws/src/DCmotor/: package.xml
catkin_ws/src/DCmotor/src/: wall.cpp
catkin_ws/src/ball_detect/: CMakeLists.txt  package.xml
catkin_ws/src/ball_detect/launch/: line_detect.launch  object_detection.launch
catkin_ws/src/ball_detect/scripts/: ObjectDetection.py  ball_detect_pub.py  line_detect.py
catkin_ws/src/dc_motor/: CMakeLists.txt  package.xml
catkin_ws/src/dc_motor/src/: wall.cpp
catkin_ws/src/dc_motor/srv/: SetHeight.srv
catkin_ws/src/dlv_bag/: CMakeLists.txt  package.xml
catkin_ws/src/dlv_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/dlv_bringup/launch/: bringup.launch  line_follower.launch  mecanum_odom.launch  mutitask.launch  record_bag.launch  test_mln.launch  test_odom.launch
catkin_ws/src/dlv_description/: CMakeLists.txt  package.xml
catkin_ws/src/dlv_description/urdf/: dlv.urdf
catkin_ws/src/dlv_mln/: CMakeLists.txt  package.xml
catkin_ws/src/dlv_mln/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf.yaml  global_costmap_params.yaml  hector_mapping_params.yaml  local_costmap_params.yaml  move_base_params.yaml
catkin_ws/src/dlv_mln/launch/: amcl.launch  hector_mapping.launch  hector_mapping_with_bag.launch  hector_mapping_with_lidar.launch  localization.launch  mapping.launch  move_base.launch  navigation.launch
catkin_ws/src/dlv_mln/launch/include/: amcl.launch  gmapping.launch  hector_mapping.launch  move_base.launch
catkin_ws/src/dlv_mln/maps/: 0723map.pgm  0723map.yaml  0917_map.pgm  0917_map.yaml  0918TDK2_map.pgm  0918TDK2_map.yaml  0918TDK_map.pgm  0918TDK_map.yaml  1011_test.pgm  1011_test.yaml  1012_test.pgm  1012_test.yaml  1013_test_map.pgm  1013_test_map.yaml  1014_test.pgm  1014_test.yaml  1016_test.pgm  1016_test.yaml  28_TDK_test_map.pgm  28_TDK_test_map.yaml
catkin_ws/src/dlv_mln/rviz/: amcl.rviz  gmapping.rviz  hector_mapping.rviz  move_base.rviz
catkin_ws/src/dlv_mln/src/: mecanum_odom_for_fusion.cpp  odom_invert.py  odom_to_base_tf_broadcaster.py  odom_to_base_tf_broadcaster_for_fusion.py  odom_to_base_tf_cam.py  two_wheel_odom_for_fusion.cpp
catkin_ws/src/dlv_teleop/: CMakeLists.txt  package.xml
catkin_ws/src/dlv_teleop/launch/: teleop.launch
catkin_ws/src/dlv_teleop/nodes/: generate_qrcode.py
catkin_ws/src/feature/dlv_plate_ctrl/: CMakeLists.txt  package.xml
catkin_ws/src/feature/dlv_plate_ctrl/include/: motor_function.h  odom_pub.h
catkin_ws/src/feature/dlv_plate_ctrl/launch/: bringup.launch  four_wheeled_motor.launch  test.launch  tool.launch  tune_pid.launch
catkin_ws/src/feature/dlv_plate_ctrl/param/: pid.yaml
catkin_ws/src/feature/dlv_plate_ctrl/src/: four_wheeled_motor_comm.cpp  motor_comm.cpp  motor_function.c  motor_respond_pub.cpp  motor_tool.cpp  move_robot.py  odom_pub.cpp  s_shape.py  s_shape_motor.py  test_sub.cpp  transmit_rpm_pub.cpp
catkin_ws/src/gmapping_ros/: package.xml
catkin_ws/src/gmapping_ros/launch/: slam_gmapping.launch
catkin_ws/src/hello/: CMakeLists.txt
catkin_ws/src/line_follower/: CMakeLists.txt  package.xml
catkin_ws/src/line_follower/config/: kalman_params.yaml
catkin_ws/src/line_follower/launch/: line_detect.launch  test_srv.launch
catkin_ws/src/line_follower/msg/: BoundingBox.msg
catkin_ws/src/line_follower/scripts/: kalman_filter.py  line_detect.py  line_detect_srv.py  line_following_nav_srv.py  mecanum_controller.py  mecanum_controller_srv.py
catkin_ws/src/line_follower/srv/: SetLineFollower.srv
catkin_ws/src/main_control/: CMakeLists.txt  package.xml
catkin_ws/src/main_control/launch/: A_take_ball_1.launch  A_take_ball_2.launch  A_to_C_motor.launch  A_to_C_nav.launch  A_to_D_nav.launch  button_control.launch  coffee.launch  main.launch  orange.launch  reset_mainC.launch  s_shape.launch  s_shape_contest.launch  s_shape_mirror.launch  to_B.launch
catkin_ws/src/main_control/scripts/: coffee.py  main_control.py  orange.py  s_shape.py  s_shape_contest.py  s_shape_mirror.py  serial_listener.py  task_launcher.py
catkin_ws/src/main_control/src/: A_take_ball.py  A_take_ball_1.py  A_take_ball_2.py  A_to_C_motor.py  A_to_C_nav.py  A_to_D_nav.py  control.py  reset_mainC.py  reset_mainD.py  s_shape.py
catkin_ws/src/object_detect/: CMakeLists.txt  package.xml
catkin_ws/src/object_detect/launch/: object_detect.launch  object_detection.launch
catkin_ws/src/object_detect/scripts/: Camera.py  ball_detect_pub.py  coffee_detection.py  coffee_supply.py  coffee_supply_srv.py  coffee_taker_srv.py  main.py  object_detection.py  orange_adjustment.py  orange_adjustment_srv.py  orange_detection.py  orange_detection_srv.py  orange_taker_srv.py
catkin_ws/src/object_detect/srv/: DetectCoffee.srv  DetectCoffeeSupply.srv  DetectObjects.srv  DetectOrange.srv  DetectOrangeAdjustment.srv  DetectOrangeGoal.srv
catkin_ws/src/odom_two_wheel_chassis/: CMakeLists.txt  package.xml
catkin_ws/src/odom_two_wheel_chassis/launch/: odom.launch  odom_mecanum.launch
catkin_ws/src/odom_two_wheel_chassis/src/: odom_mecanum.cpp  odom_two_wheel_chassis.cpp
catkin_ws/src/sensors/camera/: CMakeLists.txt  package.xml
catkin_ws/src/simple_twist_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/simple_twist_publisher/src/: simple_twist_publisher.cpp
catkin_ws/src/step_motor/: CMakeLists.txt  package.xml
catkin_ws/src/step_motor/src/: step.cpp
catkin_ws/src/step_motor/srv/: SetDistance.srv
catkin_ws/src/wall_localization/: CMakeLists.txt  package.xml
catkin_ws/src/wall_localization/launch/: wall_localization.launch
catkin_ws/src/wall_localization/msg/: WallNavGoal.msg
dotfiles/: .zshrc
scripts/: arduino.rules  camera.rules  entrypoint.sh  lidar_setup.sh  plate.rules  realsensecamera.rules  rplidar.rules  usb_setup.sh
ssh/: authorized_keys
(+21 files in other folders)
