<package format="2">
  <name>dlv_description</name>
  <version>1.0.0</version>
  <description>
    <p>robot description</p>
  </description>
  <author>TODO</author>
<maintainer email="itron@gmail.com">itron</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  <export>
    <architecture_independent />
  </export>
</package>