<?xml version="1.0"?>
<package format="2">
  <name>object_detect</name>
  <version>0.0.0</version>
  <description>The object_detect package for detecting oranges and other objects.</description>

  <maintainer email="huang@todo.todo">huang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>roscpp</build_depend> -->

  <!-- 為了讓其他套件能使用本套件的 srv/msg，需要此項 -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <!-- <build_export_depend>roscpp</build_export_depend> -->

  <!-- message_runtime 提供了執行時所需的 srv/msg 檔案 -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>roscpp</exec_depend> -->

  <export>
  </export>
</package>
